fix the background stripes on smaller devices

--- a/index.css
+++ b/index.css
@@ -921,6 +921,10 @@ a:hover {
 
   /* WHY SWIPE SECTION */
 
+  .why-swipe-section {
+    padding: var(--spacing-md) 0 var(--spacing-xl) 0;
+  }
+
   .why-swipe-section .card-container {
     flex-wrap: wrap;
   }
@@ -975,28 +979,6 @@ a:hover {
     width: 100%;
     margin: 0 0 var(--spacing-md) 0;
   }
-
-  /* FOOTER */
-
-  .footer .section-container {
-    flex-wrap: wrap;
-  }
-
-  .footer .col a {
-    font-size: 12px;
-  }
-
-  .footer .col {
-    width: 50%;
-  }
-
-  #logo {
-    width: 70px;
-  }
-
-  .footer .icon-link img {
-    width: 18px;
-  }
 }
 
 /*  MOBILE SIZE */
@@ -1050,7 +1032,27 @@ a:hover {
     grid-template-columns: 1fr 1fr;
   }
 
+  /* UNIFIED PLATFORM SECTION */
+
+  .unified-platform-section {
+    padding: var(--spacing-md) 0;
+  }
+
+  /* INTEGRATIONS SECTION */
+
+  .integrations-section {
+    padding: var(--spacing-lg) 0;
+  }
+
+  .integrations-section::before {
+    height: 900px;
+  }
+
   /* WHY SWIPE SECTION */
+
+  .why-swipe-section {
+    padding: var(--spacing-xl) 0 var(--spacing-md) 0;
+  }
 
   .why-swipe-section .card-container .card {
     width: 100%;
@@ -1063,6 +1065,14 @@ a:hover {
 
   /* GLOBAL SECTION */
 
+  .global-section {
+    padding: var(--spacing-xl) 0;
+  }
+
+  .global-section .card-container {
+    margin: var(--spacing-md);
+  }
+
   .global-section .card-container .card {
     width: 100%;
     margin: var(--spacing-sm) 0;
@@ -1073,6 +1083,10 @@ a:hover {
   }
 
   /* VIRTUAL EVENTS SECTION */
+
+  .virtual-events-section {
+    padding: 0;
+  }
 
   .virtual-events-section .swipe-sessions-card {
     width: 100%;
@@ -1085,5 +1099,33 @@ a:hover {
 
   .virtual-events-section .swipe-sessions-card .secondary-text {
     width: 100%;
+  }
+
+  /* GETTING STARTED SECTION */
+
+  .getting-started-section {
+    padding: var(--spacing-md) 0;
+  }
+
+  /* FOOTER */
+
+  .footer .section-container {
+    flex-wrap: wrap;
+  }
+
+  .footer .col a {
+    font-size: 12px;
+  }
+
+  .footer .col {
+    width: 50%;
+  }
+
+  #logo {
+    width: 70px;
+  }
+
+  .footer .icon-link img {
+    width: 18px;
   }
 }
